--- a/index.html
+++ b/index.html
@@ -62,6 +62,6 @@
         theme: 'snow'
     });
 </script>
-<script src="./renderer.js"></script>
+<script src="js/renderer.js"></script>
 </body>
 </html>
