--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
     <link href="styles/quill-snow-1.3.7.css" rel="stylesheet">
     <script src="js/quill-1.3.7.js"></script>
+    <script src="js/image-resize.min.js"></script>
+    <script src="js/image-drop.min.js"></script>
 
     <title>Note</title>
 </head>
