text file encryption with temp file complete

--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
     <div id="editor"></div>
 </div>
 <script src="js/renderer.js"></script>
+<script src="js/encryption.js"></script>
 </body>
 </html>
