--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" href="styles/style.css">
 
-    <link rel="stylesheet" href="styles/highlight-10.4.1.css">
+    <link rel="stylesheet" href="styles/highlightjs-styles/tomorrow-night.css">
     <script src="js/highlight-10.4.1.js"></script>
 
     <link href="styles/quill-snow-1.3.7.css" rel="stylesheet">
