--- a/index.html
+++ b/index.html
@@ -26,17 +26,9 @@
 </head>
 <body>
 <div style="height: 100%;">
-    <div style="width: 20%; float:left;">
-        <ul>
-            <li>Folder 1</li>
-            <li onclick="$('#folder2children').toggle();">Folder 2</li>
-            <ul id="folder2children">
-                <li>Folder A</li>
-            </ul>
-            <li>Folder 3</li>
-        </ul>
+    <div id="folders" style="width: 22%; float:left;">
     </div>
-    <div style="width: 80%; float: left;">
+    <div style="width: 78%; float: left;">
         <div id="editor"></div>
     </div>
 </div>
