fixed signup/sigin bugs

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <small class="form-text text-muted">This saves your config file locally allowing you to bypass logging in each time you open the app.
                     While this is more convenient, it also means anyone can access your files if they have access to your computer.</small>
             </div>
-            <button id="btn-submit-cred-form" type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" id="btn-submit-cred-form" class="btn btn-primary" onclick="userAuth();">Submit</button>
         </form>
     </div>
 </div>
