changed scrypt params + minor fixes

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="form-group form-check">
                 <input type="checkbox" class="form-check-input" id="checkbox-save-config">
                 <label class="form-check-label" for="checkbox-save-config">Save config file locally</label>
-                <small class="form-text text-muted">This saves your config file locally allowing you to bypass logging in each time you open the app.
+                <small class="form-text text-muted">NOT RECOMMENDED: This saves your config file locally allowing you to bypass logging in each time you open the app.
                     While this is more convenient, it also means anyone can access your files if they have access to your computer.</small>
             </div>
             <button type="submit" id="btn-submit-cred-form" class="btn btn-primary" onclick="userAuth();">Submit</button>
