changed folder structure

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
     <link href="styles/quill-snow-1.3.7.css" rel="stylesheet">
     <script src="js/quill-1.3.7.js"></script>
-    <script src="js/image-resize.min.js"></script>
-    <script src="js/image-drop.min.js"></script>
+    <script src="modules/image-resize.min.js"></script>
+    <script src="modules/image-drop.min.js"></script>
 
     <title>Note</title>
 </head>
@@ -151,8 +151,8 @@
     </div>
 
 </div>
-<script src="js/init-start.js"></script>
-<script src="js/encryption.js"></script>
-<script src="js/renderer.js"></script>
+<script src="js/app/init-start.js"></script>
+<script src="js/app/encryption.js"></script>
+<script src="js/app/renderer.js"></script>
 </body>
 </html>
