--- a/lib/index.html
+++ b/lib/index.html
@@ -8,19 +8,19 @@
     <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline'">
     -->
 
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="../styles/style.css">
 
     <script>window.$ = window.jQuery = require('jquery');</script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-    <link rel="stylesheet" href="styles/highlightjs-styles/tomorrow-night.css">
-    <script src="js/highlight-10.4.1.js"></script>
+    <link rel="stylesheet" href="../styles/highlightjs-styles/tomorrow-night.css">
+    <script src="../vendor/highlight-10.4.1.js"></script>
 
-    <link href="styles/quill-snow-1.3.7.css" rel="stylesheet">
-    <script src="js/quill-1.3.7.js"></script>
-    <script src="modules/image-resize.min.js"></script>
-    <script src="modules/image-drop.min.js"></script>
+    <link href="../styles/quill-snow-1.3.7.css" rel="stylesheet">
+    <script src="../vendor/quill-1.3.7.js"></script>
+    <script src="../modules/image-resize.min.js"></script>
+    <script src="../modules/image-drop.min.js"></script>
 
     <title>Note</title>
 </head>
@@ -82,7 +82,7 @@
         <div style="width: 25%; min-width: 200px; height:100vh; float:left; border-right: 2px black;">
             <div style="height: 50px; text-align: center; line-height: 50px; position: relative;">
                 <p class="h4" style="margin: 0; line-height: 50px;">Note</p>
-                <button id="btn-main-add" class="btn-hidden-folder-menu"><img class="add-svg" src="assets/plus-circle.svg"></button>
+                <button id="btn-main-add" class="btn-hidden-folder-menu"><img class="add-svg" src="../assets/plus-circle.svg"></button>
             </div>
             <div id="folders"></div>
         </div>
@@ -151,8 +151,8 @@
     </div>
 
 </div>
-<script src="js/app/init-start.js"></script>
-<script src="js/app/encryption.js"></script>
-<script src="js/app/renderer.js"></script>
+<script src="init-start.js"></script>
+<script src="encryption.js"></script>
+<script src="electron/renderer.js"></script>
 </body>
 </html>
