--- a/lib/index.html
+++ b/lib/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="../styles/highlightjs-styles/tomorrow-night.css">
     <script src="../vendor/highlight-10.4.1.js"></script>
 
+    <script type="module" src="../lib/config.js"></script>
+    <script type="module" src="../lib/encryption.js"></script>
     <script type="module" src="../modules/providers/google-auth.js"></script>
 
     <link href="../styles/quill-snow-1.3.7.css" rel="stylesheet">
@@ -147,7 +149,6 @@
 
 </div>
 <script src="init-start.js"></script>
-<script src="encryption.js"></script>
 <script src="editor.js"></script>
 </body>
 </html>
