--- a/lib/index.html
+++ b/lib/index.html
@@ -13,7 +13,7 @@
     <script src="../vendor/highlight-10.4.1.js"></script>
 
     <script type="module" src="../lib/config.js"></script>
-    <script type="module" src="../lib/encryption.js"></script>
+    <script type="module" src="../modules/encryption.js"></script>
     <script type="module" src="../modules/providers/google-auth.js"></script>
 
     <link href="../styles/quill-snow-1.3.7.css" rel="stylesheet">
