google oauth process - finished getting token

--- a/lib/index.html
+++ b/lib/index.html
@@ -14,6 +14,7 @@
 
     <script type="module" src="../modules/config.js"></script>
     <script type="module" src="../modules/encryption.js"></script>
+    <script type="module" src="../modules/folder-structure.js"></script>
     <script type="module" src="../modules/providers/google-auth.js"></script>
 
     <link href="../styles/quill-snow-1.3.7.css" rel="stylesheet">
