fixed folder structure build bug

--- a/lib/index.html
+++ b/lib/index.html
@@ -100,7 +100,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <h5 class="modal-title" id="label-modal-new-folder">New folder</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="clearModals();">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
@@ -113,8 +113,8 @@
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="clearModals();">Close</button>
-                        <button id='btn-create-new-folder' type="button" class="btn btn-primary" onclick="clearModals();">Create</button>
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button id='btn-create-new-folder' type="button" class="btn btn-primary">Create</button>
                     </div>
                 </div>
             </div>
