began sync gui interaction

--- a/lib/index.html
+++ b/lib/index.html
@@ -143,6 +143,7 @@
             <div style="height: 50px; text-align: center; line-height: 50px; position: relative;">
                 <button id="btn-settings" data-location="/home/anon/Documents/Projects/Note/lib/settings.html"><img class="add-svg" src="../assets/gear.svg"></button>
                 <p class="h4" style="margin: 0; line-height: 50px;">Note</p>
+                <button id="btn-sync" class="no_outline_focus"><img class="add-svg" src="../assets/arrow-repeat.svg"></button>
                 <button id="btn-main-add" class="btn-hidden-folder-menu"><img class="add-svg" src="../assets/plus-circle.svg"></button>
             </div>
             <div id="folders"></div>
