--- a/lib/index.html
+++ b/lib/index.html
@@ -74,10 +74,14 @@
                                                 privileges during the authentication process.
                                                 This is required to authenticate your account.</p>
                                         </div>
-                                        <div class="form-group">
+                                        <div class="form-group" id="div-cloud-sign-in">
+                                            <div id="cloud-sign-in-spinner" class="spinner-border" role="status">
+                                                <span class="sr-only">Loading...</span>
+                                            </div>
+                                            <script>$('#cloud-sign-in-spinner').hide() //Hide sign in spinner</script>
                                             <button id="btn-cloud-sign-in" type="button" class="btn btn-secondary">Sign In</button>
                                         </div>
-                                        <div class="form-group">
+                                        <div class="form-group" id="div-cloud-sign-out">
                                             <button id="btn-cloud-sign-out" type="button" class="btn btn-secondary">Sign Out</button>
                                         </div>
                                     </div>
