delete file from local storage

--- a/lib/index.html
+++ b/lib/index.html
@@ -155,6 +155,7 @@
         <div style="flex-grow: 1;">
             <div style="height: 50px; line-height: 50px; text-align: center;">
                 <input id="input-file-name" type="text">
+                <input id="btn-delete-note" type="image" src="../assets/trash.svg">
             </div>
             <div id="container">
                 <div id="editor-container">
