delete folder from local storage

--- a/lib/index.html
+++ b/lib/index.html
@@ -24,6 +24,7 @@
     <ul id="list-folder-menu-list">
         <li id="add-new-file" class="folder-menu-item list-group-item">New file</li>
         <li id="add-new-folder" class="folder-menu-item list-group-item">New folder</li>
+        <li id="remove-folder" class="folder-menu-item list-group-item">Remove Folder</li>
     </ul>
 </div>
 
